<resources>
    <string name="app_name">Lab2</string>
    <string name="app_settings">Settings</string>
    <string name="cartoons_filter">Filter</string>
    <string name="filter_author">Studio</string>
    <string name="filter_duration">Maximum Duration</string>
    <string name="filter_minutes">Minutes</string>
    <string name="filter_hours">Hours</string>
    <string name="settings_language">Language</string>
    <string name="settings_size">Current size:</string>
    <string name="settings_en">English</string>
    <string name="settings_by">Belarusian</string>
    <string name="cartoonsview_rating">Rating</string>
    <string name="cartoonsview_duration">Duration</string>
    <string name="video_not_available">Video is not available.</string>
    <string name="video_error_caption">Error</string>
    <string name="settings_font">Font</string>
</resources>