<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#5B0099CC"
    tools:context=".settings_activity">

    <Spinner
        android:id="@+id/languages_dropdown"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:background="#32206EFF"
        android:backgroundTint="#C6353131"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/FontSizeBar"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="10dp"
        android:max="5"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_dropdown" />


    <Spinner
        android:id="@+id/font_family_spinner"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:background="#32206EFF"
        android:backgroundTint="#C6353131"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/settings_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/settings_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/ApplyBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="29dp"
        android:text="Apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font_family_spinner"
        app:layout_constraintVertical_bias="0.993" />

    <TextView
        android:id="@+id/SizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="14dp"
        android:text="@string/settings_size"
        app:layout_constraintBottom_toTopOf="@+id/FontSizeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_dropdown" />

    <TextView
        android:id="@+id/CurrentFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/FontSizeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SizeText"
        app:layout_constraintTop_toBottomOf="@+id/languages_dropdown" />


</androidx.constraintlayout.widget.ConstraintLayout>